--- a/index.html
+++ b/index.html
@@ -51,38 +51,21 @@
        data-separator-vertical="^\r?\n\+\+\+\r?\n$"
        data-separator-notes="^Note:">
     </section>
-    <section data-background-iframe="https://apis.acdh.oeaw.ac.at/person/30155" data-background-interactive data-preload >
+    <section data-background-iframe="https://paas.acdh-dev.oeaw.ac.at/" data-background-interactive data-preload >
     </section> 
-     <section data-markdown>
-         <script type="text/template">
-           ### Prosopography of the Academy of Sciences
-            
-           https://paas.acdh-dev.oeaw.ac.at/
-        </script>
-    </section>
     <section data-background-iframe="https://sola.acdh.oeaw.ac.at/de/dataset" data-background-interactive data-preload >
     </section> 
-    <section data-background-iframe="https://apis-hub.acdh-dev.oeaw.ac.at" data-background-interactive data-preload >
-    </section>
-      <section data-markdown="sections/bern_intro.md"
+      <section data-markdown="sections/data_analysis_examples.md"
        data-separator="^\r?\n---\r?\n$"
        data-separator-vertical="^\r?\n\+\+\+\r?\n$"
        data-separator-notes="^Note:">
-     </section>
-      <section data-markdown="sections/omnipot.md"
-       data-separator="^\r?\n---\r?\n$"
-       data-separator-vertical="^\r?\n\+\+\+\r?\n$"
-       data-separator-notes="^Note:">
-    </section>
-     <section>
-        <img class="r-stretch" style="margin-bottom:60px" src="images/acdh_tools_prosopography.svg">
-    </section>
-    <section data-background-iframe="https://grlc.acdh-dev.oeaw.ac.at/api/InTaVia/grlc_sparql" data-background-interactive data-preload >
     </section>
       <section data-markdown="sections/intavia.md"
        data-separator="^\r?\n---\r?\n$"
        data-separator-vertical="^\r?\n\+\+\+\r?\n$"
        data-separator-notes="^Note:">
+    </section>
+    <section data-background-iframe="https://grlc.acdh-dev.oeaw.ac.at/api/InTaVia/grlc_sparql" data-background-interactive data-preload >
     </section>
       <section data-markdown="sections/cidoc_crm.md"
        data-separator="^\r?\n---\r?\n$"
@@ -91,7 +74,41 @@
     </section>
     <section data-background-iframe="http://www.visualdataweb.de/webvowl/#iri=https://gist.githubusercontent.com/sennierer/e777a5fe452ecd461bd1c856b662873a/raw/682e1888c314c863cd08a17c6e614cc1da0e1148/viecpro_v1.owl" data-background-interactive data-preload >
     </section> 
-      <section data-markdown="sections/bern_conclusio.md"
+    <section>
+      <div class="fragment animated move-to scale-up" data-animated-move-to-left="-10%" data-animated-scale-up-to="2.5" data-animated-scale-up-from="1">
+      <img src="images/ACDH-DSIE-SystemArchitecture.drawio.svg">
+      </div>
+    </section>
+      <section data-markdown="sections/omnipot.md"
+       data-separator="^\r?\n---\r?\n$"
+       data-separator-vertical="^\r?\n\+\+\+\r?\n$"
+       data-separator-notes="^Note:">
+    </section>
+    <section data-background-iframe="https://omnipot.acdh-dev.oeaw.ac.at" data-background-interactive data-preload >
+    </section>
+    <section>
+      <div class="fragment animated move-to scale-up" data-animated-move-to-top="10%" data-animated-move-to-left="-80%" data-animated-scale-up-to="2.5" data-animated-scale-up-from="1">
+      <img src="images/ACDH-DSIE-SystemArchitecture.drawio.svg">
+      </div>
+    </section>
+      <section data-markdown="sections/histogis.md"
+       data-separator="^\r?\n---\r?\n$"
+       data-separator-vertical="^\r?\n\+\+\+\r?\n$"
+       data-separator-notes="^Note:">
+    </section>
+      <section data-markdown="sections/vocabs.md"
+       data-separator="^\r?\n---\r?\n$"
+       data-separator-vertical="^\r?\n\+\+\+\r?\n$"
+       data-separator-notes="^Note:">
+    </section>
+    <section data-background-iframe="https://vocabs.acdh.oeaw.ac.at" data-background-interactive data-preload >
+    </section>
+    <section>
+      <div class="fragment animated move-to scale-up" data-animated-move-to-left="-10%" data-animated-move-to-top="60%" data-animated-scale-up-to="2.5" data-animated-scale-up-from="1">
+      <img src="images/ACDH-DSIE-SystemArchitecture.drawio.svg">
+      </div>
+    </section>
+      <section data-markdown="sections/arche.md"
        data-separator="^\r?\n---\r?\n$"
        data-separator-vertical="^\r?\n\+\+\+\r?\n$"
        data-separator-notes="^Note:">
@@ -100,7 +117,7 @@
          <script type="text/template">
            # Thank You!
 
-           matthias.schloegl@oeaw.ac.at
+           matthias.schloegl@oeaw.ac.at / matej.durco@oeaw.ac.at
         </script>
     </section>
 	</div>
