--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
        data-separator-vertical="^\r?\n\+\+\+\r?\n$"
        data-separator-notes="^Note:">
     </section>
-    <section data-background-iframe="https://paas.acdh-dev.oeaw.ac.at/" data-background-interactive data-preload >
-    </section> 
     <section data-background-iframe="https://sola.acdh.oeaw.ac.at/de/dataset" data-background-interactive data-preload >
+    </section> 
+    <section data-background-iframe="https://apis-hub.acdh-dev.oeaw.ac.at/" data-background-interactive data-preload >
     </section> 
       <section data-markdown="sections/data_analysis_examples.md"
        data-separator="^\r?\n---\r?\n$"
